# reduction

./: .gitignore  Cargo.toml  LICENSE  README.md
fuzz/: Cargo.toml
src/: frag.glsl  main.rs  maths.rs  ply.rs  vert.glsl  vertex.rs
