[package]
name = "reduction"
version = "0.1.0"
authors = ["Edward-0 <23418164+Edward-0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
specs = "0.16.0"
winit = "0.22.2"
packed_simd = "0.3.3"
#serde = { version = "1.0", features = ["derive"] }
#gltf = "0.15.0"

[build-dependencies]
cc = "1.0.57"
